[M] 合并上游代码至 bc274372ced1ad8a0fe1609519d6548641001135